# localstack

./: .coverage  .coveragerc  .coveralls.yml  .dockerignore  .env  .env-exporter  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .test_durations  .travis.yml  AGENTS.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  Dockerfile.rh  Dockerfile.s3  LICENSE.txt  LOCALSTACK_STUDY.md  MANIFEST.in  Makefile  NewUpdate.md  QUICK_PUSH.md  README.md  README.rst  SECURITY.md  VERSION  Vagrantfile  bitbucket-pipelines.yml  build.sh  create-table-movies.json  docker-compose-pro.yml  (+34 more)
.circleci/: config.yml
.claude/: settings.local.json
.claude/commands/: analyze.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  tasks.md
.codeboarding/: AWS_Service_Emulation_Specs.md  on_boarding.md
.github/: CLA.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  enhancement-request.yml  feature-request.yml  question.yml
.github/bot_templates/: ASF_UPGRADE_PR.md  MARKER_REPORT_ISSUE.md.j2
.github/workflows/: asf-updates.yml  aws-main.yml  aws-tests-mamr.yml  aws-tests-s3-image.yml  aws-tests.yml  build-push-ghcr.yml  chart-release.yaml  cla.yml  cli-tests.yml  create_artifact_with_features_files.yml  docker-build-base.yaml  docker-build-base.yml  dockerhub-description.yml  label-pull-requests.yml  marker-report-issue.yml  marker-report.yml  ns-sync-upstream.yaml  pr-cla.yml  pr-enforce-bugfix-master.yml  pr-enforce-docs-labels.yml  pr-enforce-no-major-main.yml  pr-enforce-no-major-master.yml  pr-enforce-no-major-minor-main.yml  pr-enforce-no-major-minor-master.yml  pr-enforce-pr-labels.yml  pr-features-catalog.yml  pr-validate-features-files.yml  pr-welcome-first-time-contributors.yml  pro-integration.yml  rebase-release-prs.yml  rebase-release-targeting-prs.yml  rh-support.yml  stale-bot.yml  super-linter.yml  sync-labels.yml  sync-project.yml  terraform-tests.yml  tests-bin.yml  tests-cli.yml  tests-integration.yml  (+10 more)
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
app/: .gitignore  .npmignore  README.md  cdk.json  jest.config.js  package.json  template.yml  tsconfig.json
app/test/: app.test.ts
chart/localstack/: Chart.yaml  values-production.yaml  values.yaml
doc/: feature_coverage.md
doc/advanced-topics/: README.md
doc/cloud-developer-tools/: README.md
doc/configuration/: README.md
doc/contribute/: CONTRIBUTORS.md
doc/contributor_license_agreement/: README.md
doc/developer_guides/: README.md
doc/end_user_license_agreement/: README.md
doc/integrations/: README.md
doc/interaction/: README.md
doc/python3_compatibility/: README.md
doc/roadmap/: README.md
doc/third-party-software-tools/: README.md
doc/troubleshoot/: README.md
docs/: CONTRIBUTING.md  README.md  _index.md  contributing.md  development-environment-setup.md  integration-tests.md  multi-account-region-testing.md  parity-testing.md  terraform-tests.md
docs/Concepts/: index.md
docs/development-environment-setup/: README.md  index.md
docs/integration-tests/: README.md
docs/localstack-concepts/: README.md
docs/parity-testing/: index.md
docs/testing/: README.md
etc/: metric_aggregator.py
etc/cla-signatures/: signatures.json
etc/localstack/: constants.py
etc/tf-patch/: 0001-endpoints.patch  0002-reduce-timeout-ec2.patch  0003-reduce-timeout-route53.patch  0004-reduce-timeout-iam.patch  0005-reduce-timeout-cf.patch
example/: get-item.yaml  run.sh  table.yaml
ext/java/: .gitignore  pom.xml
go-sqs/: go.mod  go.sum  main.go
localstack/: __init__.py  config.py  constants.py  datatypes.py  deprecations.py  main.py  package.json  plugins.py  version.py
localstack-core/: mypy.ini
localstack-core/localstack/: config.py  constants.py  deprecations.py  openapi.yaml  plugins.py  run_test.py  schema.py  spec.py  version.py
localstack/aws/: accounts.py  app.py  chain.py  challenger.py  client.py  connect.py  context.py  forwarder.py  gateway.py  handlers.py  mocking.py  plugins.py  provider.py  proxy.py  scaffold.py  skeleton.py  spec-patches.json  spec.py  trace.py
localstack/cli/: __init__.py  localstack.py  lpm.py  main.py  plugin.py  plugins.py  profiles.py
localstack/contrib/: __init__.py  thundra.py
localstack/dashboard/: api.py  infra.py
localstack/dns/: plugins.py  server.py
localstack/extensions/: __init__.py
localstack/http/: __init__.py  adapters.py  asgi.py  client.py  cors.py  dispatcher.py  hypercorn.py  proxy.py  request.py  resource.py  response.py  router.py  websocket.py
localstack/logging/: format.py  setup.py
localstack/mock/: __init__.py  firehose_api.py  generic_proxy.py  infra.py  install.py  lambda_api.py  pom.xml
localstack/persistence/: __init__.py  core.py  locate.py
localstack/plugin/: __init__.py  collector.py  core.py  (+5 more)
openspec/: config.yaml
scripts/: .gitignore  CONTRIBUTOR_ANALYSIS.md  analyze_contributors.py  analyze_perflogs.py  build_common_test_functions.sh  capture_notimplemented_responses.py  coverage_docs_utility.py  find_leaking_test_resources.py  gather_outdated_snapshots.py  generate_minimal_boto3stubs_install.py  generate_test_selection.py  githook_deps_check.py  metric_aggregator.py  render_marker_report.py  update_cfn_resources.py
spec/: openapi.yaml
tests/: __init__.py  conftest.py  fixtures.py  logs.db  store_police.py  test_iam_credentials.py  test_integration.py  test_kin.py  test_kinesis_errors.py  test_message_transformation.py
tests/aws/services/lambda_/functions/common/introspection/provided/src/: Cargo.toml
tests/aws/services/lambda_/functions/common/introspection/provided/src/src/: main.rs
(+6846 files in other folders)
