[metadata]
name = localstack
description = LocalStack - A fully functional local Cloud stack
url = https://github.com/localstack/localstack
version = attr: localstack.__version__
author = LocalStack Contributors
author_email = info@localstack.cloud
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet
    Topic :: Software Development :: Testing
    Topic :: System :: Emulators

[options]
zip_safe = False
test_suite = tests
scripts =
    bin/localstack
    bin/localstack.bat
packages=find:

# dependencies that are required for the cli (via pip install localstack)
install_requires =
    boto3>=1.20
    click>=7.0
    cachetools>=3.1.1,<4.0.0
    # dataclasses needed for python3.6 compat
    dataclasses; python_version < '3.7'
    #dnspython==1.16.0
    localstack-client>=1.31
    localstack-ext>=0.14.0
    plux>=1.3.1
    psutil>=5.4.8,<6.0.0
    python-dotenv>=0.19.1
    pyyaml>=5.1
    rich>=10.7.0
    requests>=2.20.0,<2.26
    semver>=2.10
    stevedore>=3.4.0
    # needed for python3.7 compat (TypedDict, Literal, type hints)
    typing-extensions; python_version < '3.8'
    tailer>=0.4.1

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
* =
    *.md
    Makefile
localstack =
    package.json
    utils/kinesis/java/cloud/localstack/*.*

[options.extras_require]
# required to actually run localstack on the host
runtime =
    airspeed==0.5.18
    # Use our "ext" version until this bug is fixed: https://github.com/awslabs/amazon-kinesis-client-python/issues/99
    amazon_kclpy-ext==1.5.1
    # amazon-kclpy==1.5.1
    aws-sam-translator>=1.15.1
    awscli>=1.14.18
    boto>=2.49.0
    botocore>=1.12.13
    cbor2>=5.2.0
    crontab>=0.22.6
    cryptography
    docker==5.0.0
    flask>=1.0.2
    flask-cors>=3.0.3,<3.1.0
    flask_swagger==0.2.12
    jsonpatch>=1.24,<2.0
    jsonpath-rw>=1.4.0,<2.0.0
    localstack-ext[full]>=0.13.2
    moto-ext[all]==3.0.5
    opensearch-py>=1.0.0
    pproxy>=2.7.0
    #pympler>=0.6
    pyopenssl>=21.0.0
    Quart>=0.6.15
    readerwriterlock>=1.0.7
    requests-aws4auth==0.9
    #sasl>=0.2.1
    Werkzeug>=2.0
    xmltodict>=0.11.0

# @deprecated - use extra 'runtime' instead.
full =
    %(runtime)s

# for running tests and coverage analysis
test =
    pytest==6.2.4
    pytest-httpserver>=1.0.1
    pytest-rerunfailures==10.0
    # coverage version should be synced with bin/Dockerfile.base
    coverage[toml]>=5.5

# for developing localstack
dev =
    black==21.6b0
    coveralls==3.1.0
    Cython
    flake8>=3.6.0
    flake8-black==0.2.3
    flake8-isort>=4.0.0
    flake8-quotes>=0.11.0
    # enables flake8 configuration through pyproject.toml
    pre-commit==2.13.0
    pyproject-flake8
    isort==5.9.1
    pandoc
    pypandoc
    autoflake
