[metadata]
name = localstack
description = LocalStack - A fully functional local Cloud stack
url = https://github.com/localstack/localstack
version = attr: localstack.__version__
author = LocalStack Contributors
author_email = info@localstack.cloud
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Topic :: Internet
    Topic :: Software Development :: Testing
    Topic :: System :: Emulators

[options]
zip_safe = False
test_suite = tests
scripts =
    bin/localstack
    bin/localstack.bat
packages=find:

# dependencies that are required for the cli (via pip install localstack)
install_requires =
    boto3>=1.20
    click>=7.0
    cachetools~=5.0.0
    #dnspython==1.16.0
    localstack-client>=1.31
    localstack-ext>=1.0.5.dev,<1.1
    plux>=1.3.1
    psutil>=5.4.8,<6.0.0
    python-dotenv>=0.19.1
    pyyaml>=5.1
    rich>=12.3.0
    requests>=2.20.0,<2.26
    semver>=2.10
    stevedore>=3.4.0
    # needed for python3.7 compat (TypedDict, Literal, type hints)
    typing-extensions; python_version < '3.8'
    tailer>=0.4.1
    apispec>=5.1.1

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
* =
    *.md
    Makefile
localstack =
    utils/kinesis/java/cloud/localstack/*.*

[options.extras_require]
# required to actually run localstack on the host
runtime =
    airspeed==0.5.19
    amazon_kclpy>=2.0.6
    aws-sam-translator>=1.15.1
    awscli>=1.22.90
    boto>=2.49.0
    botocore>=1.12.13
    cbor2>=5.2.0
    crontab>=0.22.6
    cryptography
    docker==5.0.0
    flask==2.1.3
    flask-cors>=3.0.3,<3.1.0
    flask_swagger==0.2.12
    jsonpatch>=1.24,<2.0
    jsonpath-rw>=1.4.0,<2.0.0
    localstack-ext[runtime]>=1.0.5.dev,<1.1
    moto-ext[all]==3.1.14
    opensearch-py==1.1.0
    pproxy>=2.7.0
    pyopenssl>=21.0.0
    Quart==0.17
    readerwriterlock>=1.0.7
    requests-aws4auth==0.9
    # TODO: remove werkzeug&flask version pins once we can upgrade to latest versions
    Werkzeug==2.1.2
    xmltodict>=0.11.0

# @deprecated - use extra 'runtime' instead.
full =
    %(runtime)s

# for running tests and coverage analysis
test =
    # coverage version should be synced with bin/Dockerfile.base
    coverage[toml]>=5.5
    deepdiff>=5.5.0
    jsonpath-ng>=1.5.3
    pytest==6.2.4
    pytest-httpserver>=1.0.1
    pytest-rerunfailures==10.0

# for developing localstack
dev =
    black==22.3.0
    coveralls==3.1.0
    Cython
    flake8<5.0.0
    flake8-black==0.3.2
    flake8-isort>=4.0.0
    flake8-quotes>=0.11.0
    # enables flake8 configuration through pyproject.toml
    pre-commit==2.13.0
    pyproject-flake8
    isort==5.9.1
    pandoc
    pypandoc
    autoflake
    networkx>=2.8.4
    rstr>=3.2.0
