[metadata]
name = localstack-core
description = The core library and runtime of LocalStack
url = https://github.com/localstack/localstack
version = attr: localstack.__version__
author = LocalStack Contributors
author_email = info@localstack.cloud
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Topic :: Internet
    Topic :: Software Development :: Testing
    Topic :: System :: Emulators

[options]
python_requires = >=3.8
zip_safe = False
test_suite = tests
scripts =
    bin/localstack
    bin/localstack.bat
    bin/localstack-supervisor
packages=find:

# dependencies that are required for the cli (via pip install localstack)
install_requires =
    click>=7.0
    cachetools>=5.0
    cryptography
    dill==0.3.6
    dnslib>=0.9.10
    dnspython>=1.16.0
    plux>=1.3.1
    psutil>=5.4.8,<6.0.0
    python-dotenv>=0.19.1
    pyyaml>=5.1
    rich>=12.3.0
    requests>=2.20.0
    semver>=2.10
    stevedore>=3.4.0
    tailer>=0.4.1

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
* =
    *.md
    Makefile
localstack =
    aws/**/*.json
    services/**/*.html
    services/**/resource_providers/*.schema.json
    utils/kinesis/java/cloud/localstack/*.*

[options.extras_require]
# required to actually run localstack on the host
runtime =
    airspeed-ext>=0.6.3
    amazon_kclpy>=2.0.6,!=2.1.0
    antlr4-python3-runtime==4.13.1
    apispec>=5.1.1
    aws-sam-translator>=1.15.1
    awscli>=1.22.90
    awscrt>=0.13.14
    boto3>=1.26.121
    botocore>=1.31.2
    cbor2>=5.2.0
    crontab>=0.22.6
    dnspython>=1.16.0
    docker>=6.1.1
    flask>=3.0.0
    flask-cors>=4.0.0
    hypercorn>=0.14.4
    json5==0.9.11
    jsonpatch>=1.24,<2.0
    jsonpath-ng==1.5.3
    jsonpath-rw>=1.4.0,<2.0.0
    # to be removed when https://github.com/python-openapi/openapi-schema-validator/issues/131 is resolved
    jsonschema<=4.19.0
    localstack-client>=2.0
    moto-ext[all]==4.2.6.post1
    opensearch-py>=2.3.2
    pymongo>=4.2.0
    pyopenssl>=23.0.0
    Quart>=0.19.2
    readerwriterlock>=1.0.7
    requests-aws4auth>=1.0
    # explicitly set urllib3 to force its usage / ensure compatibility
    urllib3>=2.0.7
    Werkzeug>=3.0.0
    xmltodict>=0.13.0

# @deprecated - use extra 'runtime' instead.
full =
    %(runtime)s

# for running tests and coverage analysis
test =
    # coverage version should be synced with bin/Dockerfile.base
    coverage[toml]>=5.5
    deepdiff>=6.4.1
    jsonpath-ng>=1.5.3
    pluggy>=1.3.0
    pytest==7.4.2
    pytest-split>=0.8.0
    pytest-httpserver>=1.0.1
    pytest-rerunfailures==12.0
    pytest-tinybird>=0.2.0
    aws-cdk-lib>=2.88.0

# for developing localstack
dev =
    black==23.10.0
    coveralls>=3.3.1
    Cython
    networkx>=2.8.4
    pandoc
    pre-commit==3.5.0
    pypandoc
    ruff==0.1.0
    rstr>=3.2.0

# not strictly necessary for development, but provides type hint support for a better developer experience
typehint =
    boto3-stubs[acm,amplify,apigateway,apigatewayv2,appconfig,appsync,athena,autoscaling,backup,batch,ce,cloudcontrol,cloudformation,cloudfront,cloudtrail,cloudwatch,codecommit,cognito-identity,cognito-idp,dms,docdb,dynamodb,dynamodbstreams,ec2,ecr,ecs,efs,eks,elasticache,elasticbeanstalk,elbv2,emr,emr-serverless,es,events,firehose,fis,glacier,glue,iam,iot,iot-data,iotanalytics,iotwireless,kafka,kinesis,kinesisanalytics,kinesisanalyticsv2,kms,lakeformation,lambda,logs,mediaconvert,mediastore,mq,mwaa,neptune,opensearch,organizations,pi,qldb,qldb-session,rds,rds-data,redshift,redshift-data,resource-groups,resourcegroupstaggingapi,route53,route53resolver,s3,s3control,sagemaker,sagemaker-runtime,secretsmanager,serverlessrepo,servicediscovery,ses,sesv2,sns,sqs,ssm,stepfunctions,sts,timestream-query,timestream-write,transcribe,xray]
