[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://crates.io/crates/lambda_runtime
lambda_runtime = "0.8.3"
# https://crates.io/crates/serde_json
serde_json = "1.0.108"
# https://crates.io/crates/tokio
tokio = { version = "1.34.0", features = ["full"] }
