[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Upgrade dependencies:
# 1. cargo install cargo-edit
# 2. cargo upgrade -i
[dependencies]
# https://crates.io/crates/lambda_runtime
lambda_runtime = "1.0.2"
# https://crates.io/crates/serde_json
serde_json = "1.0.149"
# https://crates.io/crates/tokio
tokio = { version = "1.49.0", features = ["full"] }
